Server simple estatico funcionando

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome Page</title>
+    <!-- Cargando estilos -->
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
     <h1>ITGAM - TICS</h1>
@@ -13,5 +15,7 @@
             Saludar
         </button>
     </p>
+    <!-- Cargar scripts -->
+    <script src='js/site.js'></script>
 </body>
 </html>
