Servidor estatico simple completo

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,9 @@
     <title>Awesome Page</title>
     <!-- Cargando estilos -->
     <link rel="stylesheet" href="css/site.css">
+    <!-- Cargando los estilos de sweet alert -->
+    <link rel="stylesheet" 
+    href="vendor\sweetalert\dist\sweetalert.css">
 </head>
 <body>
     <h1>ITGAM - TICS</h1>
@@ -15,6 +18,9 @@
             Saludar
         </button>
     </p>
+    <!-- Cargar script de sweet alert -->
+    <script src="vendor\sweetalert\dist\sweetalert.min.js">
+    </script>
     <!-- Cargar scripts -->
     <script src='js/site.js'></script>
 </body>
