Se carga Bootstrap y cpodigo para formularios

--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome Page</title>
+    <!-- Cargando Los estilos de Bootstrap -->
+    <link 
+        rel="stylesheet" 
+        href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Cargando el estilo -->
+    <link 
+        rel="stylesheet" 
+        href="vendor\bootstrap\dist\css\bootstrap-theme.min.css">
     <!-- Cargando estilos -->
     <link rel="stylesheet" href="css/site.css">
     <!-- Cargando los estilos de sweet alert -->
     <link rel="stylesheet" 
-    href="vendor\sweetalert\dist\sweetalert.css">
+    href="vendor/sweetalert/dist/sweetalert.css">
 </head>
 <body>
     <h1>ITGAM - TICS</h1>
@@ -18,8 +26,14 @@
             Saludar
         </button>
     </p>
+    <!-- Cargando a Jquery -->
+    <script 
+        src="vendor/jquery/dist/jquery.min.js"></script>
+    <!-- Cargando Bootstrap -->
+    <script 
+        src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Cargar script de sweet alert -->
-    <script src="vendor\sweetalert\dist\sweetalert.min.js">
+    <script src="vendor/sweetalert/dist/sweetalert.min.js">
     </script>
     <!-- Cargar scripts -->
     <script src='js/site.js'></script>
