Formulario que captura a base de datos

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome Page</title>
+    <style>
+        label{
+            color: white;
+        }
+    </style>
     <!-- Cargando Los estilos de Bootstrap -->
     <link 
         rel="stylesheet" 
@@ -17,15 +22,95 @@
     <link rel="stylesheet" 
     href="vendor/sweetalert/dist/sweetalert.css">
 </head>
-<body>
-    <h1>ITGAM - TICS</h1>
-    <p>Sitio de la carrera de ITICS</p>
-    <p>
-        <button
-            onclick="saludar()">
-            Saludar
-        </button>
-    </p>
+<body style="background: #2A7AB8">    
+    <div class="bs-example">
+        <form 
+            action="/"
+            method="POST"
+            style="padding-top: 10px;"
+            class="form-horizontal">
+            <div class="form-group">
+                <label for="" class="control-label col-xs-5">
+                    INGRESE SUS DATOS
+                </label>
+            </div>
+            <div class="form-group">
+                <label 
+                    for="inputNombre" 
+                    class="control-label col-xs-2">
+                    Nombre del Condomino
+                </label>
+                <div class="col-xs-5">
+                    <input
+                        class="form-control" 
+                        type="text"
+                        name="nombre"
+                        id="inputNombre"
+                        placeholder="Nombre">
+                </div>
+            </div>
+            <!--  -->
+            <div class="form-group">
+                <label 
+                    for="inputApellido" 
+                    class="control-label col-xs-2">
+                    Apellidos del Condomino
+                </label>
+                <div class="col-xs-5">
+                    <input
+                        class="form-control" 
+                        type="text"
+                        name="apellidos"
+                        id="inputApellido"
+                        placeholder="Apellidos">
+                </div>
+            </div>
+            <!--  -->
+            <div class="form-group">
+                <label 
+                    for="inputDepto" 
+                    class="control-label col-xs-2">
+                    Numero de Departamento
+                </label>
+                <div class="col-xs-5">
+                    <input
+                        class="form-control" 
+                        type="text"
+                        name="depto"
+                        id="inputDepto"
+                        placeholder="Num Depto">
+                </div>
+            </div>
+            <!--  -->
+            <div class="form-group">
+                <label 
+                    for="inputPassword" 
+                    class="control-label col-xs-2">
+                    Password
+                </label>
+                <div class="col-xs-5">
+                    <input
+                        required
+                        class="form-control" 
+                        type="password"
+                        name="password"
+                        id="inputPassword"
+                        placeholder="Ingrese Password"
+                        maxlength="8">
+                </div>
+            </div>
+            <!-- Seccion de envio -->
+            <div class="form-group">
+                <div class="col-xs-offset-2 col-xs-10">
+                    <input 
+                        type="submit"
+                        class="btn btn-primary"
+                        value="ENVIAR">
+                </div>
+            </div>
+        </form>
+    </div>
+
     <!-- Cargando a Jquery -->
     <script 
         src="vendor/jquery/dist/jquery.min.js"></script>
